Fix word-wrap

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -48,6 +48,7 @@
         }
         &__p{
             margin-bottom: 0.3em;
+            word-wrap: break-word;
         }
     }
 }
