--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,7 +8,8 @@
         width: 100%;
         background-color: #ffffff;
         z-index: 1;
-        top: 0; 
+        top: 0;
+        box-shadow: 0 1px 5px $primaryColor;
         @media screen and (max-width: 900px){
             display: block;
         } 
